deployments/service-b-v2/service-b-v2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b-v2-service
  namespace: istio-meshlab
  labels:
    app: service-b-v2
spec:
  selector:
    app: service-b-v2
  ports:
    - name: http
      port: 80
      targetPort: 8080
