deployments/service-b-v2/service-b-v2-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: service-b-v2-gateway
  namespace: istio-meshlab
  labels:
    app: service-b-v2
spec:
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: service-b-v2-tls
      hosts:
        - "service-b-v2.local"
